--- a/netflix.css
+++ b/netflix.css
@@ -25,16 +25,16 @@ body{
     
 }
 
-
-
 .header{
     width: 100%;
     height: 700px; 
     left: 0;
     top: 0;
-    background-image: linear-gradient(to top, rgba(0, 0, 0, 1) 0%,
-                                    rgba(0, 0, 0, 0.7) 40%, rgba(0,0,0,0.5) 70%, 
-                    rgba(0, 0, 0, 0.75) 100%), url(images/header-image.png);
+    background-image: 
+        linear-gradient(to top,
+            rgba(0, 0, 0, 1) 0%,rgba(0, 0, 0, 0.7) 40%, 
+            rgba(0,0,0,0.5) 70%, 
+            rgba(0, 0, 0, 0.75) 100%), url(images/header-image.png);
     background-size: cover;
     background-position: center;
     position: relative;
@@ -80,18 +80,12 @@ body{
 /* -------------- */
 
 #language{
-    padding-right: 0.75rem;
-    padding-left: 1rem;
-    padding-bottom: 0.375rem;
-    padding-top: 0.375rem;
     display: inline-flex;
     align-items: center;
-    border-radius: 4px;
+    border-radius: 3px;
+    border: 5px solid transparent;
     font-size: medium;
     color: black;
-    background-image: linear-gradient(
-        to top, rgba(255, 255, 255, 0.2)0%, rgba(255, 255, 255, 0.2) 74%, rgba(248, 115, 115, 0.336) 100%
-    );
 }
 
 nav{
@@ -113,7 +107,12 @@ nav button{
     margin-left: 10px;
     border-radius: 4px;
     cursor: pointer;
-    transition: 1s ease;
+    transition: .3s ease;
+}
+
+nav .button-header:hover {
+    background-color: #fff;
+    color: #db0001;
 }
 /*-----------------*/
 
